src/test/deca/syntax/invalid/decaObjet/multi_line_comment/03_manque_etoile_debut.deca
// Description:
//    tests de programme incorrect lexicalement : 
//    il manque un * pour le multi lignes commentaire au début
//
// Resultats:
//    03_manque_etoile_debut.deca:11:4:
//
// Historique:
//    cree le 14/06/2022
{
    /a;
    aaa;
    aaaa;
    */   

}